# vkcs-samples

./: .gitignore  CMakeLists.txt  README.md
android/: settings.gradle
android/base/: CMakeLists.txt
android/vkcs1/: CMakeLists.txt  build.gradle
android/vkcs1/src/main/: AndroidManifest.xml
android/vkcs1/src/main/java/vulkan/samples/vkcs1/: MainActivity.java
android/vkcs1/src/main/res/layout/: activity_main.xml
android/vkcs1/src/main/res/navigation/: nav_graph.xml
android/vkcs1/src/main/res/values/: strings.xml  styles.xml
code/: CMakeLists.txt
code/common/: CMakeLists.txt  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommon.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanHelper.cpp  VulkanHelper.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanTexture.cpp  VulkanTexture.hpp  VulkanWindow.cpp  VulkanWindow.hpp
code/common/WIN32/: Win32Window.cpp  Win32Window.hpp
code/data/glsl/: cs1.comp  cs1.comp.spv
code/data/hlsl/: cs1.comp  cs1.comp.spv
code/utils/: util.cpp
code/vkcs1/: CMakeLists.txt  cs.cpp
scripts/: generate_spirv.py
